AP-25245: added different toml input options to python env provider node (simple, file and bundled)
AP-25245 ()